Fixed alignment for RTL language support (Fixes #309); removed weird Urdu Unicode bugs; modified 'direction' attribute for RTL languages

--- a/source/less/TL.Timeline.Base.less
+++ b/source/less/TL.Timeline.Base.less
@@ -91,3 +91,17 @@
 		.box-shadow(0px -3px 6px rgba(0,0,0,.20));
 	}
 }
+
+.tl-rtl{
+	.tl-text-content, .tl-headline, .tl-media-blockquote, .tl-headline-date, .tl-timeline blockquote p, .tl-text, .tl-media-website, .tl-media-twitter, .tl-media-wikipedia, .tl-media .tl-media-blockquote blockquote, .blockquote, blockquote p, .tl-text-content p{
+		text-align: right;
+	}
+}
+
+
+
+
+
+
+
+
